Bug 241331 - IPC::PixelBufferReference is a redundant class in wrong software layer
Summary: IPC::PixelBufferReference is a redundant class in wrong software layer
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Canvas (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kimmo Kinnunen
URL:
Keywords: InRadar
Depends on: 244042
Blocks:
  Show dependency treegraph
 
Reported: 2022-06-06 02:18 PDT by Kimmo Kinnunen
Modified: 2022-08-18 08:31 PDT (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kimmo Kinnunen 2022-06-06 02:18:44 PDT
IPC::PixelBufferReference is a redundant class in wrong software layer
Comment 1 Kimmo Kinnunen 2022-06-06 10:58:31 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1326
Comment 2 Radar WebKit Bug Importer 2022-06-13 02:19:31 PDT
<rdar://problem/95001347>
Comment 3 Kimmo Kinnunen 2022-08-15 04:39:52 PDT
Pull request: https://github.com/WebKit/WebKit/pull/3302
Comment 4 EWS 2022-08-17 01:22:50 PDT
Committed 253512@main (7b1cf97214a0): <https://commits.webkit.org/253512@main>

Reviewed commits have been landed. Closing PR #3302 and removing active labels.
Comment 5 WebKit Commit Bot 2022-08-17 10:54:15 PDT
Re-opened since this is blocked by bug 244042